crates/fleet-server/tests/snapshots/middleware__bare_422.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 422,
  "headers": {
    "cache-control": "no-store",
    "content-length": "139",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]",
    "x-test-handler": "kept"
  },
  "body": {
    "error": {
      "code": "validation_failed",
      "fields": [],
      "message": "Some fields are invalid.",
      "request_id": "[request_id]"
    }
  }
}
