crates/fleet-server/tests/snapshots/middleware__bare_429_with_retry.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 429,
  "headers": {
    "cache-control": "no-store",
    "content-length": "133",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "ratelimit-policy": "20;w=1",
    "referrer-policy": "no-referrer",
    "retry-after": "7",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "rate_limited",
      "message": "Too many requests. Try again later.",
      "request_id": "[request_id]"
    }
  }
}
