crates/fleet-server/tests/snapshots/middleware__bare_502.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 502,
  "headers": {
    "cache-control": "no-store",
    "content-length": "169",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]",
    "x-test-handler": "kept"
  },
  "body": {
    "error": {
      "code": "internal",
      "message": "Something went wrong on the server. Quote the request ID when reporting it.",
      "request_id": "[request_id]"
    }
  }
}
