crates/fleet-server/tests/snapshots/middleware__error_not_found.snap
---
source: crates/fleet-server/tests/middleware.rs
expression: redacted(seen)
---
{
  "status": 404,
  "headers": {
    "cache-control": "no-store",
    "content-length": "122",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "not_found",
      "message": "The resource doesn't exist.",
      "request_id": "[request_id]"
    }
  }
}
